--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,13 +2,39 @@
 
 <h1>Articles</h1>
 
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
-</div>
+<div class="container">
+  <button class="new-article">
+    <%= link_to "New article", new_article_path %>
+  </button>
 
-<%= link_to "New article", new_article_path %>
+  <div id="articles">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Title</th>
+          <th scope="col">Views Count</th>
+          <th scope="col">Author</th>
+          <th scope="col">Publish Date</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @articles.each_with_index do |article, index| %>
+          <tr>
+            <th scope="row"><%= index + 1 %></th>
+            <td><%= article.title %></td>
+            <td><%= article.readings %></td> 
+            <td><%= article.user.username %></td>
+            <td><%= article.created_at.strftime("%B %d, %Y") %></td>
+            <td>
+              <%= link_to "Show", article_path(article), class: "btn btn-primary" %>
+              <%= link_to "Edit", edit_article_path(article), class: "btn btn-warning" %>
+              <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
