--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,16 +1,41 @@
 
-<%= simple_form_for(@article) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<h1><%= @article.new_record? ? 'New Article' : 'Edit Article' %></h1>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :content %>
-    <%= f.input :is_public %>
-    <%= f.input :published_at, as: :datepicker %>
-  </div>
+<div class="container">
+  <%= simple_form_for(@article, url: (@article.new_record? ? articles_path : article_path(@article)), html: { class: "form" }) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-primary" %>
-  </div>
-<% end %>
+    <div class="mb-3">
+      <%= f.input :title, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } %>
+    </div>
+    <div class="mb-3">
+      <%= f.input :content, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control', rows: 6 } %>
+    </div>
+    <div class="mb-3">
+      <%= f.input :is_public, as: :boolean, label: 'Public', label_html: { class: 'form-check-label' }, input_html: { class: 'form-check-input' } %>
+    </div>
+    <div class="mb-3">
+      <%= f.input :published_at, as: :string, label_html: { class: 'form-label' }, input_html: { class: 'form-control', id: 'datepicker' } %>
+      <%# <span class="input-group-append">
+        <span class="input-group-text bg-light d-block">
+          <i class="fa fa-calendar"></i>
+        </span>
+      </span> %>
+    </div>
+    <div class="form-actions">
+      <%= f.button :submit, @article.new_record? ? 'Create Article' : 'Update Article', class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
+
+<div>
+  <%= link_to "Back to articles", articles_path %>
+</div>
+
+<script>
+console.log("datepicker js")
+ $(function(){
+  $('#datepicker').datepicker()
+});
+</script>
