--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,27 +1,16 @@
-<div id="<%= dom_id article %>">
-  <p>
-    <strong>Title:</strong>
-    <%= article.title %>
-  </p>
 
-  <p>
-    <strong>Content:</strong>
-    <%= article.content %>
-  </p>
-
-  <p>
-    <strong>Is public:</strong>
-    <%= article.is_public %>
-  </p>
-
-  <p>
-    <strong>Published at:</strong>
-    <%= article.published_at %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= article.user_id %>
-  </p>
-
+<div id="<%= dom_id article %>" class="container">
+  <div class="card justify-content-center">
+    <div class="card-body">
+      <h5 class="card-title"> <%= article.title %></h5>
+      <p class="card-text">
+        <%= article.published_at %>
+      by <%= @author %>
+      </p>
+      <p class="card-text">
+        <%= article.content %> 
+      </p>
+    </div>
+  </div>
 </div>
+
