--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,7 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Articles</h1>
-
 <div class="container">
-  <button class="new-article">
-    <%= link_to "New article", new_article_path %>
-  </button>
-
-  <div id="articles">
+<h1> <%= Article.count %> Articles </h1>
+<br>
+ <div id="articles" class="container">
     <table class="table">
       <thead>
         <tr>
@@ -28,13 +22,22 @@
             <td><%= article.user.username %></td>
             <td><%= article.created_at.strftime("%B %d, %Y") %></td>
             <td>
-              <%= link_to "Show", article_path(article), class: "btn btn-primary" %>
-              <%= link_to "Edit", edit_article_path(article), class: "btn btn-warning" %>
-              <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+              <%= link_to article_path(article), class: "btn btn-primary btn-sm" do %>
+                <i class="fas fa-eye"></i> Show
+              <% end %>
+              <% if user_signed_in? && current_user == article.user %>
+                <%= link_to edit_article_path(article), class: "btn btn-warning btn-sm" do %>
+                <i class="fas fa-edit"></i> Edit
+                <% end %>
+                <%= link_to article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" do %>
+                  <i class="fas fa-trash"></i> Delete
+                <% end %>
+              <% end %>
             </td>
           </tr>
         <% end %>
       </tbody>
     </table>
+    <%= paginate @articles %>
   </div>
 </div>
