--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,44 +1,46 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-custom">
-  <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo.png" %>
-    <% end %>
+<div id="app">
+  <div class="navbar navbar-expand-sm navbar-light navbar-custom">
+    <div class="container-fluid">
+      <%= link_to root_path, class: "navbar-brand" do %>
+        <%= image_tag "logo.png" %>
+      <% end %>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <%= form_with(url: search_articles_path, method: :get, local: true, class: "d-flex") do |form| %>
-        <%= form.text_field :query, placeholder: "Search for articles", class: "form-control" %>
-        <%= form.submit "Search", class: "btn btn-outline-success" %>
-        <% end %>
-      </li>
-        <% if user_signed_in? %>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <% if current_user.avatar.attached? %>
-              <%= image_tag url_for(current_user.avatar), class: "avatar", alt: "dropdown menu" %>
-            <% else %>
-              <%= image_tag "logo.png", class: "avatar", alt: "dropdown menu" %>
-            <% end %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My Articles", my_articles_path, class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+        <% if controller_name == 'articles' && action_name == 'index' %>
+          <li class="nav-item" id="search-form">
+            <form @submit.prevent="searchArticles" class="d-flex">
+              <input v-model="query" placeholder="Search for articles" class="form-control" id="search-input">
+              <button type="submit" class="btn btn-outline-success">Search</button>
+            </form>
           </li>
         <% end %>
-      </ul>
+          <% if user_signed_in? %>
+            <li class="nav-item dropdown">
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if current_user.avatar.attached? %>
+                <%= image_tag url_for(current_user.avatar), class: "avatar", alt: "dropdown menu" %>
+              <% else %>
+                <%= image_tag "logo.png", class: "avatar", alt: "dropdown menu" %>
+              <% end %>
+            </a>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "My Articles", my_articles_path, class: "dropdown-item" %>
+                <%= link_to "Another action", "#", class: "dropdown-item" %>
+                <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              </div>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
-
   </div>
 </div>
 
