--- a/test.html.erb
+++ b/test.html.erb
@@ -38,3 +38,19 @@
     $('#datepicker').datepicker();
   });
   </script>
+
+
+  <% @articles.each_with_index do |article, index| %>
+          <tr>
+            <th scope="row"><%= index + 1 %></th>
+            <td><%= article.title %></td>
+            <td><%= article.readings %></td> 
+            <td><%= article.user.username %></td>
+            <td><%= article.created_at.strftime("%B %d, %Y") %></td>
+            <td>
+              <%= link_to "Show", article_path(article), class: "btn btn-primary" %>
+              <%= link_to "Edit", edit_article_path(article), class: "btn btn-warning" %>
+              <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+            </td>
+          </tr>
+        <% end %>
