--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,5 +8,18 @@
 }
 
 .navbar-custom .navbar-brand img {
-  width: 40px;
+  width: 50px;
 }
+
+.animated-logo {
+  /* Your animation CSS code */
+  width: 60px;
+  height: 60px;
+}
+
+// @keyframes spin {
+//   0% { transform: rotate(0deg); }
+//   100% { transform: rotate(360deg); }
+// }
+
+
