--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,36 +1,35 @@
 
-<h1><%= @article.new_record? ? 'New Article' : 'Edit Article' %></h1>
-
 <div class="container">
-  <%= simple_form_for(@article, url: (@article.new_record? ? articles_path : article_path(@article)), html: { class: "form" }) do |f| %>
-    <%= f.error_notification %>
-    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+  <h1><%= @article.new_record? ? 'New Article' : 'Edit Article' %></h1>
 
-    <div class="mb-3">
-      <%= f.input :title, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } %>
-    </div>
-    <div class="mb-3">
-      <%= f.input :content, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control', rows: 6 } %>
-    </div>
-    <div class="mb-3">
-      <%= f.input :is_public, as: :boolean, label: 'Public', label_html: { class: 'form-check-label' }, input_html: { class: 'form-check-input' } %>
-    </div>
-    <div class="mb-3">
-      <%= f.input :published_at, as: :string, label_html: { class: 'form-label' }, input_html: { class: 'form-control', id: 'datepicker' } %>
-      <%# <span class="input-group-append">
-        <span class="input-group-text bg-light d-block">
-          <i class="fa fa-calendar"></i>
-        </span>
-      </span> %>
-    </div>
-    <div class="form-actions">
-      <%= f.button :submit, @article.new_record? ? 'Create Article' : 'Update Article', class: "btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+  <div class="my-4">
+    <%= link_to articles_path, class: "btn btn-outline-secondary" do %>
+      <i class="fas fa-arrow-left"></i> Back to Articles
+    <% end %>
+  </div>
 
-<div>
-  <%= link_to "Back to articles", articles_path %>
+  <div class="container">
+    <%= simple_form_for(@article, url: (@article.new_record? ? articles_path : article_path(@article)), html: { class: "form" }) do |f| %>
+      <%= f.error_notification %>
+      <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+      <div class="mb-3">
+        <%= f.input :title, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } %>
+      </div>
+      <div class="mb-3">
+        <%= f.input :content, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control', rows: 6 } %>
+      </div>
+      <div class="mb-3">
+        <%= f.input :is_public, as: :boolean, label: 'Public', label_html: { class: 'form-check-label' }, input_html: { class: 'form-check-input' } %>
+      </div>
+      <div class="mb-3">
+        <%= f.input :published_at, as: :string, label_html: { class: 'form-label' }, input_html: { class: 'form-control', id: 'datepicker' } %>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, @article.new_record? ? 'Create' : 'Update', class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <script>
