--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,24 @@
-<div class="container">
-<h1> <%= Article.count %> Articles </h1>
-<br>
- <div id="articles" class="container">
+<div class="container" id="app">
+  <div class="row align-items-center">
+    <div class="col-sm-6">
+      <h1> <%= @articles.total_count %> Articles </h1>
+    </div>
+    <div class="col-sm-6" id="search-form">
+      <%= form_tag articles_path, method: :get do %>
+        <div class="input-group">
+          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search articles" %>
+          <div class="input-group-append">
+            <%= button_tag(type: :submit, class: "btn btn-outline-secondary") do %>
+              <i class="fas fa-search"></i>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <br>
+
+  <div id="articles">
     <table class="table">
       <thead>
         <tr>
@@ -15,28 +32,28 @@
       </thead>
       <tbody>
         <% @articles.each_with_index do |article, index| %>
-          <tr>
-            <th scope="row"><%= index + 1 %></th>
-            <td><%= article.title %></td>
-            <td><%= article.readings %></td> 
-            <td><%= article.user.username %></td>
-            <td><%= article.created_at.strftime("%B %d, %Y") %></td>
-            <td>
-              <%= link_to article_path(article), class: "btn btn-primary btn-sm" do %>
-                <i class="fas fa-eye"></i> Show
+        <tr>
+          <th scope="row"><%= index + 1 %></th>
+          <td><%= article.title %></td>
+          <td><%= article.readings %></td>
+          <td><%= article.user.username %></td>
+          <td><%= article.published_at%></td>
+          <td>
+            <%= link_to article_path(article), class: "btn btn-outline-primary btn-sm" do %>
+              <i class="fas fa-eye"></i> Show
+            <% end %>
+            <% if user_signed_in? && current_user == article.user %>
+              <%= link_to edit_article_path(article), class: "btn btn-outline-primary btn-sm" do %>
+              <i class="fas fa-edit"></i> Edit
               <% end %>
-              <% if user_signed_in? && current_user == article.user %>
-                <%= link_to edit_article_path(article), class: "btn btn-warning btn-sm" do %>
-                <i class="fas fa-edit"></i> Edit
-                <% end %>
-                <%= link_to article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" do %>
-                  <i class="fas fa-trash"></i> Delete
-                <% end %>
+              <%= link_to article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-primary btn-sm" do %>
+                <i class="fas fa-trash"></i> Delete
               <% end %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
     </table>
     <%= paginate @articles %>
   </div>
