--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,9 @@
-<p style="color: green"><%= notice %></p>
+<div class="container">
+  <div class="my-4">
+      <%= link_to articles_path, class: "btn btn-outline-secondary" do %>
+        <i class="fas fa-arrow-left"></i> Back to Articles
+      <% end %>
+  </div>
 
-<%= render @article %>
-
-<div>
-  <%= link_to "Edit this article", edit_article_path(@article) %> |
-  <%= link_to "Back to articles", root_path %>
-
-  <%= button_to "Destroy this article", @article, method: :delete %>
+  <%= render @article %>
 </div>
