--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
-<div id="app">
+<div>
   <div class="navbar navbar-expand-sm navbar-light navbar-custom">
     <div class="container-fluid">
       <%= link_to root_path, class: "navbar-brand" do %>
-        <%= image_tag "logo.png" %>
+        <%= image_tag "logo.svg", class: "animated-logo" %>
       <% end %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,28 +10,22 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
-        <% if controller_name == 'articles' && action_name == 'index' %>
-          <li class="nav-item" id="search-form">
-            <form @submit.prevent="searchArticles" class="d-flex">
-              <input v-model="query" placeholder="Search for articles" class="form-control" id="search-input">
-              <button type="submit" class="btn btn-outline-success">Search</button>
-            </form>
-          </li>
-        <% end %>
           <% if user_signed_in? %>
-            <li class="nav-item dropdown">
-            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item">
               <% if current_user.avatar.attached? %>
-                <%= image_tag url_for(current_user.avatar), class: "avatar", alt: "dropdown menu" %>
+                <%= image_tag url_for(current_user.avatar), class: "avatar", alt: "user avatar" %>
               <% else %>
-                <%= image_tag "logo.png", class: "avatar", alt: "dropdown menu" %>
+                <%= image_tag "avatar.png", class: "avatar", alt: "default avatar" %>
               <% end %>
-            </a>
-              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <%= link_to "My Articles", my_articles_path, class: "dropdown-item" %>
-                <%= link_to "Another action", "#", class: "dropdown-item" %>
-                <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-              </div>
+            </li>
+            <li class="nav-item">
+              <%= link_to "My Articles", articles_path(my_articles: true), class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Write Article", new_article_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %>
             </li>
           <% else %>
             <li class="nav-item">
