--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,11 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
+$blue: #9C84E2 ;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$cyan: #1B75E2;
+$blogio: #351BE2
