--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar navbar-expand-sm navbar-light navbar-custom">
     <div class="container-fluid">
       <%= link_to root_path, class: "navbar-brand" do %>
-        <%= image_tag "logo.svg", class: "animated-logo" %>
+        <%= image_tag "Blogio.png" %>
       <% end %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
