--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -39,17 +39,19 @@
           <td><%= article.user.username %></td>
           <td><%= article.published_at%></td>
           <td>
-            <%= link_to article_path(article), class: "btn btn-outline-primary btn-sm" do %>
-              <i class="fas fa-eye"></i> Show
-            <% end %>
-            <% if user_signed_in? && current_user == article.user %>
-              <%= link_to edit_article_path(article), class: "btn btn-outline-primary btn-sm" do %>
-              <i class="fas fa-edit"></i> Edit
+            <div class="buttons">
+              <%= link_to article_path(article), class: "btn btn-link" do %>
+                <i class="fas fa-eye"></i> Show
               <% end %>
-              <%= link_to article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-primary btn-sm" do %>
-                <i class="fas fa-trash"></i> Delete
+              <% if user_signed_in? && current_user == article.user %>
+                <%= link_to edit_article_path(article), class: "btn btn-link" do %>
+                <i class="fas fa-edit"></i> Edit
+                <% end %>
+                <%= link_to article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-link" do %>
+                  <i class="fas fa-trash"></i> Delete
+                <% end %>
               <% end %>
-            <% end %>
+            </div>
           </td>
         </tr>
       <% end %>
