--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="my-4">
-      <%= link_to articles_path, class: "btn btn-outline-secondary" do %>
+      <%= link_to articles_path, style: "text-decoration: none;" do %>
         <i class="fas fa-arrow-left"></i> Back to Articles
       <% end %>
   </div>
