--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,8 +3,8 @@
   <h1><%= @article.new_record? ? 'New Article' : 'Edit Article' %></h1>
 
   <div class="my-4">
-    <%= link_to articles_path, class: "btn btn-outline-secondary" do %>
-      <i class="fas fa-arrow-left"></i> Back to Articles
+    <%= link_to articles_path, style: "text-decoration: none;" do %>
+      <i class="fas fa-arrow-left"></i>Back to Articles
     <% end %>
   </div>
 
@@ -23,7 +23,7 @@
         <%= f.input :is_public, as: :boolean, label: 'Public', label_html: { class: 'form-check-label' }, input_html: { class: 'form-check-input' } %>
       </div>
       <div class="mb-3">
-        <%= f.input :published_at, as: :string, label_html: { class: 'form-label' }, input_html: { class: 'form-control', id: 'datepicker' } %>
+        <%= f.input :published_at, as: :string, label_html: { class: 'form-label' }, input_html: { class: 'datepicker', id: 'datepicker' } %>
       </div>
       <div class="form-actions">
         <%= f.button :submit, @article.new_record? ? 'Create' : 'Update', class: "btn btn-primary" %>
@@ -33,24 +33,9 @@
 </div>
 
 <script>
-console.log("datepicker js")
-$(function(){
-  var currentDate = new Date();
-  var currentMonth = currentDate.getMonth();
-  var currentYear = currentDate.getFullYear();
-
-  $('#datepicker').datepicker({
-    minDate: new Date(currentYear, currentMonth, currentDate.getDate()),
-    startDate: new Date(currentYear, currentMonth, currentDate.getDate())
-  });
-
-  $('#datepicker').on('changeDate', function(e) {
-    var selectedDate = e.date;
-    var today = new Date();
-    
-    if (selectedDate < today) {
-      alert("Please choose a date from today onwards.");
-    }
-  });
+console.log('hello')
+$('.datepicker').datepicker({
+  format: 'yyyy/mm/dd',
+  startDate: '-3d'
 });
 </script>
