--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,10 +3,10 @@
     <div class="col-sm-6">
       <h1> <%= @articles.total_count %> Articles </h1>
     </div>
-    <div class="col-sm-6" id="search-form">
-      <%= form_tag articles_path, method: :get do %>
+    <div class="col-sm-6">
+      <%= form_tag articles_path, method: :get, id: "search-form", 'v-on:submit.prevent': 'searchArticles' do %>
         <div class="input-group">
-          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search articles" %>
+          <%= text_field_tag :query, params[:query] , id: "query", class: "form-control", placeholder: "Search articles" %>
           <div class="input-group-append">
             <%= button_tag(type: :submit, class: "btn btn-outline-secondary") do %>
               <i class="fas fa-search"></i>
@@ -21,7 +21,7 @@
 
   <div id="articles">
     <table class="table">
-      <thead>
+    <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Title</th>
@@ -31,6 +31,7 @@
           <th scope="col">Action</th>
         </tr>
       </thead>
+
       <tbody>
         <% @articles.each_with_index do |article, index| %>
         <tr>
@@ -38,27 +39,52 @@
           <td><%= article.title %></td>
           <td><%= article.readings %></td>
           <td><%= article.user.username %></td>
-          <td><%= article.published_at%></td>
+          <td><%= article.published_at %></td>
           <td>
             <div class="buttons">
-              <%= link_to article_path(article), style: "text-decoration: none;", class: "btn btn-link" do %>
+              <a href="/articles/<%= article.id %>" style="text-decoration: none;" class="btn btn-link">
                 <i class="fas fa-eye"></i> Show
-              <% end %>
-              <% if user_signed_in? && current_user == article.user %>
-                <%= link_to edit_article_path(article), style: "text-decoration: none;", class: "btn btn-link" do %>
-                <i class="fas fa-edit"></i> Edit
-                <% end %>
-                <%= link_to article_path(article), style: "text-decoration: none;", data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-link" do %>
+              </a>
+              <% if current_user.id == article.user.id %>
+                <a href="/articles/<%= article.id %>/edit" style="text-decoration: none;" class="btn btn-link">
+                  <i class="fas fa-edit"></i> Edit
+                </a>
+                <a href="/articles/<%= article.id %>" style="text-decoration: none;" class="btn btn-link" data-turbo-frame="_top" data-turbo-method="delete" data-turbo-confirm="Are you sure?">
                   <i class="fas fa-trash"></i> Delete
-                <% end %>
+                </a>
               <% end %>
             </div>
           </td>
         </tr>
       <% end %>
-    </tbody>
+
+      <tr v-for="(article, index) in articles" :key="article.id">
+          <th scope="row">{{ index + 1 }}</th>
+          <td>{{ article.title }}</td>
+          <td>{{ article.readings }}</td>
+          <td>{{ article.user.username }}</td>
+          <td>{{ article.published_at }}</td>
+          <td>
+            <div class="buttons" style="white-space: nowrap">
+              <a :href="'/articles/' + article.id" style="text-decoration: none;" class="btn btn-link">
+                <i class="fas fa-eye"></i> Show
+              </a>
+              <template v-if="currentUser.id=== article.user.id">
+                <a :href="'/articles/' + article.id + '/edit'" style="text-decoration: none;" class="btn btn-link">
+                  <i class="fas fa-edit"></i> Edit
+                </a>
+                <a :href="'/articles/' + article.id" style="text-decoration: none;" data-turbo-frame="_top" data-turbo-method="delete" data-turbo-confirm="Are you sure?" class="btn btn-link">
+                  <i class="fas fa-trash"></i> Delete
+                </a>
+              </template>
+            </div>
+          </td>
+        </tr>
+      </tbody>
     </table>
     <br>
     <%= paginate @articles %>
   </div>
 </div>
+
+
