--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,6 +16,7 @@
       <% end %>
     </div>
   </div>
+
   <br>
   <br>
 
@@ -33,6 +34,7 @@
       </thead>
 
       <tbody>
+        <template v-if="!query">
         <% @articles.each_with_index do |article, index| %>
         <tr>
           <th scope="row"><%= (@articles.current_page - 1) * @articles.limit_value + index + 1 %></th>
@@ -45,7 +47,7 @@
               <a href="/articles/<%= article.id %>" style="text-decoration: none;" class="btn btn-link">
                 <i class="fas fa-eye"></i> Show
               </a>
-              <% if current_user.id == article.user.id %>
+              <% if current_user && article.user && current_user.id == article.user.id  %> 
                 <a href="/articles/<%= article.id %>/edit" style="text-decoration: none;" class="btn btn-link">
                   <i class="fas fa-edit"></i> Edit
                 </a>
@@ -56,9 +58,10 @@
             </div>
           </td>
         </tr>
-      <% end %>
-
-      <tr v-for="(article, index) in articles" :key="article.id">
+        <% end %>
+        </template>
+        <template v-else>
+        <tr v-for="(article, index) in articles" :key="article.id">
           <th scope="row">{{ index + 1 }}</th>
           <td>{{ article.title }}</td>
           <td>{{ article.readings }}</td>
@@ -80,6 +83,7 @@
             </div>
           </td>
         </tr>
+        </template>
       </tbody>
     </table>
     <br>
